--- a/src/component/cardData/style.css
+++ b/src/component/cardData/style.css
@@ -11,9 +11,15 @@
 }
 
 img {
+      height: auto;
+      width: 100%;
       border-radius: 5px 5px 0 0;
 }
 
 .text {
       padding: 2px 6px;
+}
+
+.text > h3, .text > p {
+      color: #212529;
 }
